# template-python-project

./: LICENSE  MANIFEST.in  README.md  example_dot_env  mkdocs.yml  pyproject.toml  setup.py  tox.ini
docs/: index.md
example_python_project/: main.py
tests/: test_main.py
